--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
+    
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="blazor.webassembly.js"></script>
+    <script src="_framework/blazor.webassembly.js"></script>
     <script src="site.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
 </body>
